added RGBLight and Thermometer devices